--- a/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
@@ -9,8 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MvvmCross" Version="9.3.1" />
     <PackageReference Include="MvvmCross.Platforms.Wpf" Version="9.3.1" />
+    <PackageReference Include="Uno.UI" Version="5.6.99" />
   </ItemGroup>
 
   <ItemGroup>
