--- a/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
@@ -15,10 +15,15 @@
     </PackageReference>
     <PackageReference Include="MvvmCross" Version="9.3.1" />
     <PackageReference Include="MvvmCross.Platforms.Wpf" Version="9.3.1" />
+    <PackageReference Include="SharpVectors" Version="1.8.4.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BambuConfigGenerator.Core\BambuConfigGenerator.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\hamburger-button-svgrepo-com.svg" />
   </ItemGroup>
 
 </Project>
