--- a/BambuConfigGenerator/BambuConfigGenerator.Core/BambuConfigGenerator.Core.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator.Core/BambuConfigGenerator.Core.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>0.7.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
