--- a/BambuConfigGenerator/BambuConfigGenerator.Core/BambuConfigGenerator.Core.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator.Core/BambuConfigGenerator.Core.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
     <PackageReference Include="MvvmCross" Version="9.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
