added easy generator

--- a/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator/BambuConfigGenerator.csproj
@@ -13,6 +13,7 @@
     <None Remove="Resources\border_color_24dp.svg" />
     <None Remove="Resources\delete_24dp.svg" />
     <None Remove="Resources\folder_24dp.svg" />
+    <None Remove="Resources\format_paint_24dp.svg" />
     <None Remove="Resources\lunch_dining.svg" />
     <None Remove="Resources\refresh.svg" />
     <None Remove="Resources\settings_24dp.svg" />
@@ -42,6 +43,7 @@
     <Resource Include="Resources\Colors.xaml" />
     <Resource Include="Resources\delete_24dp.svg" />
     <Resource Include="Resources\folder_24dp.svg" />
+    <Resource Include="Resources\format_paint_24dp.svg" />
     <Resource Include="Resources\hamburger-button-svgrepo-com.svg" />
     <Resource Include="Resources\lunch_dining.svg" />
     <Resource Include="Resources\refresh.svg" />
