--- a/BambuConfigGenerator/BambuConfigGenerator.ExcelToJsonGenerator/BambuConfigGenerator.ExcelToJsonGenerator.csproj
+++ b/BambuConfigGenerator/BambuConfigGenerator.ExcelToJsonGenerator/BambuConfigGenerator.ExcelToJsonGenerator.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BambuConfigGenerator.Contracts\BambuConfigGenerator.Contracts.csproj" />
   </ItemGroup>
 
